assets/css/styles.css
/* ... */
input[type="search"] {
    -webkit-appearance: textfield;
    -moz-box-sizing: content-box;
    -webkit-box-sizing: content-box;
    box-sizing: content-box
}

input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none
}

fieldset {
    border: 1px solid #c0c0c0;
    margin: 0 2px;
    padding: 0.35em 0.625em 0.75em
}

legend {
    border: 0;
    padding: 0
}

textarea {
    overflow: auto
}

optgroup {
    font-weight: bold
}

table {
    border-collapse: collapse;
    border-spacing: 0
}

td, th {
    padding: 0
}

div.highlighter-rouge, figure.highlight {
    position: relative;
    margin-bottom: 1em;
    background: #263238;
    color: #eff;
    font-family: Monaco, Consolas, "Lucida Console", monospace;
    font-size: .75em;
    line-height: 1.8;
    border-radius: 4px
}

div.highlighter-rouge > pre, div.highlighter-rouge pre.highlight,
figure.highlight > pre, figure.highlight pre.highlight {
    margin: 0;
    padding: 1em
}

code.highlighter-rouge {
    padding: 0.2em 0.4em;
    font-size: .75em;
    background-color: rgba(38, 50, 56, 0.15);
    color: #24292e;
    border-radius: 2px;
    font-family: Monaco, Consolas, "Lucida Console", monospace
}

.highlight table {
    margin-bottom: 0;
    font-size: 1em;
    border: 0
}

.highlight table td {
    padding: 0;
    width: calc(100% - 1em);
    border: 0
}

.highlight table td.gutter, .highlight table td.rouge-gutter {
    padding-right: 1em;
    width: 2em;
    color: #B2CCD6;
    border-right: 1px solid #B2CCD6;
    text-align: right
}

.highlight table td.code, .highlight table td.rouge-code {
    padding-left: 1em
}

.highlight table pre {
    margin: 0
}

.highlight pre {
    width: 100%
}



.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0
}

.sr-only-focusable:active, .sr-only-focusable:focus {
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto
}

.gist table tbody tr td {
    box-sizing: content-box
}

::selection {
    background: #D4D4D4
}

::-moz-selection {
    background: #D4D4D4
}


/* No `:visited` state is required by default (browsers will use `a`) */
a {
  color: #4f9241;
  text-decoration: none;
}
/* `:focus` is linked to `:hover` for basic accessibility */
a:hover,
a:focus {
  text-decoration: none;
  color: rgb(32, 133, 100);
}

.postimage {
  display:block;
  margin:12px auto;
  /* max-width:500px; */
  width:100%;
}

.postimage .caption {
  font-size: .8em;
  line-height: .6 !important;
}

section.box {
  border-bottom: 1px solid gray;
  margin-bottom: 6px;
  padding: 12px 0 5px 0;
}

#artmain {
  border-bottom:none;
}

/* .art header h1, .photographs header h1, .notes header h1 {
  font-size: 1.2em;
  padding:0;
  color:silver;
  text-align: center;
} */

.art .post-content ul {
  list-style: none;
  font-size: .7em;
  margin: 3px 0;
  /* text-align: center; */
}

.art .post-content p {
    margin: .8em 0;
    color: #505e6b;
    font-size: .9em;
}

.art .caption{
display:none;
}

p.linkall {
  text-align: center;

}

/* .portfolio header h1 a {
color:#797979;
}

.portfolio header h1 {
font-size: 1.1em;
} */

div.portfolio header {
  border-bottom:none !important;
  margin-top: 12px;
}

.portfolio h2 {
    text-align: left;
}

section.art img {
  /* border:1px solid #c2c2c2; */
  width:auto;
  max-height: 95vh;
  margin-left:auto;
  margin-right: auto;
  display:block;
}

.nft {
    display: flex;
    align-items: center;
    justify-content: center;
    border:1px solid #c2c2c2;
    border-radius: 6px;
    /* width:35%; */
    /* max-height: 100vh; */
    margin:0 auto 12px auto;
    padding:.5em;
    /* height:2em; */
    background-color: #da21be;
    color:white;
  }

  /* @media (max-width: 768px) {
    .nft {
        width:80%;
    }
} */

  .nft a {
    color:white;
    text-decoration: none;
    font-size: .8em;
    line-height: 1;
    margin:0;
  }

  .nft:hover {
    background-color: silver;
  }

  .nft a:hover {
    text-decoration: none;
  }

  .forsale {
    /* display: flex; */
    align-items: center;
    justify-content: center;
    border:1px solid #c2c2c2;
    border-radius: 16px;
    /* max-height: 100vh; */
    margin:1em auto 1em auto;
    padding:.5em 1em;
    width:45%;
    /* height:2em; */
    background-color: #1f6c8d;
    color:white;
  }

  /* @media (max-width: 768px) {
    .nft {
        width:80%;
    }
} */

  .forsale a {
    color:white;
    text-decoration: none;
    font-size: .8em;
    line-height: 3;
    margin:0;
  }

  .forsale:hover {
    background-color: rgb(209, 234, 156);
  }

  .forsale a:hover {
    text-decoration: none;
    color:#000;
  }

  .tag-list a:hover {
    background-color: silver;
  }

section.photo img {
    border:1px solid #c2c2c2;
    width:auto;
    max-height: 80vh;
    margin-left:auto;
    margin-right: auto;
    display:block;
  }

  body.newsletter section.photo .main img {
    width:25%;
  }

   body.newsletters .excerpt img {
    display:block;
    margin:0 auto;
    width:450px !important;
  }

  .photo p {
      /* text-align: center; */
  }

  .caption {
      font-size: .9em;
      color:#4f93ce;
  }

   .photo span {
    display:block;
      text-align: center;
  }



  .video-box { 
    position: relative; 
    padding-bottom: 56.25%;
    /* padding-top: 30px; */
    height: 0; 
    overflow: hidden; 
}

.video-box iframe, .video-box object, .video-box embed {
     position: absolute; 
     top: 0; 
     left: 0; 
     width: 100%; 
     height: 100%; 
}

section.sale {
    border:1px solid rgb(204, 204, 204);
    background-color: rgb(249, 249, 249);
    /* display: flex;
    flex-flow: row wrap;
    justify-content: space-between; */
    /* align-items: center; */
    padding: .5em 1em;
    margin:1em auto 1em auto;
    padding:.5em 1em;
    width:45%;
}
/* ... */

